scotia-peru-aks/viya/sas-bases/overlays/network/istio/components/sas-model-manager/resources.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sas-model-management
spec:
  host: sas-model-management
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: sas-ingress-istio
          path: /modelManagement/
          ttl: 0s

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sas-model-repository
spec:
  host: sas-model-repository
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: sas-ingress-istio
          path: /modelRepository/
          ttl: 0s

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-model-management
    sas.com/admin: namespace
  name: sas-model-management
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /modelManagement
    - uri:
        prefix: /modelManagement/
    route:
    - destination:
        host: sas-model-management
    timeout: 300s

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-model-repository
    sas.com/admin: namespace
  name: sas-model-repository
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /modelRepository
    - uri:
        prefix: /modelRepository/
    route:
    - destination:
        host: sas-model-repository
    timeout: 300s
